--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "highlight.js": "^11.7.0",
     "katex": "^0.16.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
