--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint"
+    "preview": "vite preview"
   },
   "dependencies": {
     "highlight.js": "^11.7.0",
