--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "simple-quiz-composer",
+  "homepage": "https://edu-games-academy.github.io/Simple-Quiz-Composer",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "predeploy": "yarn build --base=/Simple-Quiz-Composer/",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -32,6 +35,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
