--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,57 +1,64 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/javascript-node
 {
-	"name": "Node.js",
-	"image": "mcr.microsoft.com/devcontainers/javascript-node:16-bullseye",
-	
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-		// "ghcr.io/devcontainers-contrib/features/typescript:1": {},
-		// "ghcr.io/devcontainers/features/desktop-lite:1": {},
-	},
+  "name": "Node.js",
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:16-bullseye",
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [3000, 8080],
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  "features": {
+    // "ghcr.io/devcontainers-contrib/features/typescript:1": {},
+    // "ghcr.io/devcontainers/features/desktop-lite:1": {},
+  },
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": ["bash", "./bin/init.sh"],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [3000, 8080],
 
-	// Configure tool-specific properties.
-	"customizations": {
-		// Configure properties specific to VS Code.
-		"vscode": {
-			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": [
-			  "dbaeumer.vscode-eslint",
-			  "esbenp.prettier-vscode",
-			  "marclipovsky.string-manipulation",
-			  "ChakrounAnas.turbo-console-log",
-			  "eamodio.gitlens"
-			],
-			"settings": {
-			  "typescript.preferences.quoteStyle": "single",
-			  "[typescript]": {
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-				"editor.formatOnSave": true
-			  },
-			  "[typescriptreact]": {
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-				"editor.formatOnSave": true
-			  },
-			  "[javascript]": {
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-				"editor.formatOnSave": true
-			  },
-			  "[html]": {
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-				"editor.formatOnSave": true
-			  },
-			  "terminal.integrated.defaultProfile.linux": "zsh",
-			  "terminal.integrated.fontFamily": "MesloLGS NF"
-			}
-		  }
-	}
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": ["bash", "./bin/init.sh"],
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  // Configure tool-specific properties.
+  "customizations": {
+    // Configure properties specific to VS Code.
+    "vscode": {
+      // Add the IDs of extensions you want installed when the container is created.
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "heybourn.headwind",
+        "bradlc.vscode-tailwindcss",
+        "austenc.tailwind-docs",
+        "marclipovsky.string-manipulation",
+        "ChakrounAnas.turbo-console-log",
+        "eamodio.gitlens"
+      ],
+      "settings": {
+        "typescript.preferences.quoteStyle": "single",
+        "[typescript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        },
+        "[typescriptreact]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        },
+        "[javascript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        },
+        "[javascriptreact]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        },
+        "[html]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "terminal.integrated.fontFamily": "MesloLGS NF"
+      }
+    }
+  }
+
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
