--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
+    "gift-pegjs": "^0.2.1",
     "immutability-helper": "^3.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
