--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
     "gift-pegjs": "^0.2.1",
+    "git-repo-version": "^1.0.2",
     "immutability-helper": "^3.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
