feat(core): add lib template

--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "predeploy": "yarn build --base=/Simple-Quiz-Composer/",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "vite build --base=/Simple-Quiz-Composer/",
     "preview": "vite preview",
     "custom-eslint": "eslint --fix src/**/*.jsx",
     "custom-prettier": "prettier --write .",
@@ -36,7 +35,6 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "gh-pages": "^5.0.0",
     "gift-pegjs": "^0.2.1",
     "git-repo-version": "^1.0.2",
     "immutability-helper": "^3.1.1",
