--- a/.github/workflows/coverage-diff.yml
+++ b/.github/workflows/coverage-diff.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
 jobs:
   test-coverage-core:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Run tests & check coverage on Core
     permissions:
       checks: write
