--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -21,7 +21,7 @@ jobs:
           mv app/dist gh-pages
           mv core/gh-pages ./gh-pages/core
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@8817a56e5bfec6e2b08345c81f4d422db53a2cdc
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: gh-pages
