--- a/sqc-core-functions/package.json
+++ b/sqc-core-functions/package.json
@@ -25,6 +25,9 @@
   "files": [
     "dist"
   ],
+  "dependencies": {
+    "gift-pegjs": "^0.2.1"
+  },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.3",
