chore(main): update GH actions

--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - core/**
+      - app/**
 jobs:
   generate-docs-and-coverage-core:
     runs-on: ubuntu-latest
