--- a/.github/steps/docs-coverage-report/action.yml
+++ b/.github/steps/docs-coverage-report/action.yml
@@ -1,5 +1,5 @@
-name: Test Build
-description: Lint, Build, Test
+name: Create docs and coverage report
+description: Create docs and coverage report to publish to GH page
 inputs:
   directory:
     description: "Working directory"
@@ -8,10 +8,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install dependencies
-      run: yarn install
-      shell: bash
-      working-directory: ${{inputs.directory}}
+    - uses: ./.github/steps/install
+      with:
+        directory: ${{inputs.directory}}
 
     - name: Create the docs
       run: yarn run docs
