--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   # TODO After publishing repository change this to trigger on push to main and test
   workflow_dispatch:
 jobs:
-  release-core:
+  release:
     # Don't forget to configure production environment after repository is made public to require approval before triggering!
     environment: production
     runs-on: ubuntu-latest
