--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -30,7 +30,11 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^28.1.3",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.12.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
@@ -40,6 +44,8 @@
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^4.4.1",
     "rollup": "^2.75.7",
     "rollup-plugin-dts": "^4.2.2",
@@ -49,5 +55,9 @@
     "ts-jest": "^28.0.5",
     "typedoc": "^0.22.17",
     "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
