--- a/sqc-ui-components/tsconfig.json
+++ b/sqc-ui-components/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "jsx": "react",
+    "esModuleInterop": true,
     "outDir": "dist/src",
     "module": "es6",
     "moduleResolution": "node",
