--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -8,28 +8,47 @@
     "type": "git",
     "url": "https://github.com/Edu-Games-Academy/Simple-Quiz-Composer.git"
   },
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/scripts.cjs",
+      "import": "./dist/scripts.es.js"
+    },
+    "./styles.css": {
+      "require": "./dist/styles.css",
+      "default": "./dist/styles.css"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.js",
+    "build": "vite build && yarn build:css",
+    "build:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./dist/styles.css",
+    "storybook": "concurrently \"yarn storybook:css\" \"storybook dev -p 6006\"",
+    "storybook:css": "tailwindcss -w -i ./src/tailwind-entry.css -o ./build/styles.css",
+    "build-storybook": "concurrently \"yarn build-storybook:css\" \"storybook build\"",
+    "build-storybook:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./build/styles.css",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:dts": "tsc --noEmit --isolatedModules dist/template-ts.d.ts",
+    "test:dts": "find dist -name \"*.d.ts\" -exec npx tsc --noEmit {} \\;",
     "docs": "typedoc src/index.ts --out docs",
     "release": "semantic-release"
   },
-  "main": "dist/template-ts.cjs.js",
-  "module": "dist/template-ts.esm.js",
-  "types": "dist/template-ts.d.ts",
-  "sideEffects": false,
-  "files": [
-    "dist"
-  ],
   "devDependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^8.3.3",
+    "@babel/core": "^7.20.5",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
+    "@storybook/addon-essentials": "^7.0.0-rc.5",
+    "@storybook/addon-interactions": "^7.0.0-rc.5",
+    "@storybook/addon-links": "^7.0.0-rc.5",
+    "@storybook/blocks": "^7.0.0-rc.5",
+    "@storybook/react": "^7.0.0-rc.5",
+    "@storybook/react-vite": "^7.0.0-rc.5",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^28.1.3",
@@ -37,24 +56,29 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "concurrently": "^7.6.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "postcss": "^8.4.20",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^4.4.1",
-    "rollup": "^2.75.7",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-license": "^2.8.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
     "semantic-release": "19.0.3",
+    "storybook": "^7.0.0-rc.5",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "^28.0.5",
     "typedoc": "^0.22.17",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.1",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
