fix(core): fix release scope

--- a/sqc-core-functions/.releaserc
+++ b/sqc-core-functions/.releaserc
@@ -21,6 +21,10 @@
             "type": "docs",
             "scope": "README",
             "release": "patch"
+          },
+          {
+            "scope": "!core",
+            "release": false
           }
         ]
       }
