--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -83,5 +83,9 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "immutability-helper": "^3.1.1",
+    "sqc-core-functions": "^1.1.1"
   }
 }
