--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -78,6 +78,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.1",
     "vite-plugin-dts": "^1.7.1",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "peerDependencies": {
