--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -34,7 +34,7 @@
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:dts": "find dist -name \"*.d.ts\" -exec npx tsc --noEmit {} \\;",
+    "test:dts": "find dist -name \"*.d.ts\" | xargs npx tsc --noEmit",
     "docs": "typedoc src/index.ts --out docs",
     "release": "semantic-release"
   },
