--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -34,7 +34,7 @@
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:dts": "find dist -name \"*.d.ts\" | xargs npx tsc --noEmit",
+    "test:dts": "find dist -name \"*.d.ts\" | xargs npx tsc --esModuleInterop --noEmit",
     "docs": "typedoc src/index.ts --out docs",
     "release": "semantic-release"
   },
@@ -52,6 +52,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^28.1.3",
+    "@types/katex": "^0.16.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -89,6 +90,7 @@
     "highlight.js": "^11.7.0",
     "immutability-helper": "^3.1.1",
     "katex": "^0.16.6",
+    "react-quill": "^2.0.0",
     "sqc-core-functions": "^1.1.1"
   }
 }
