--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,10 @@
   },
   "dependencies": {
     "flowbite": "^1.6.4",
-    "highlight.js": "^11.7.0",
-    "katex": "^0.16.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0"
+    "sqc-ui-components": "^1.2.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -35,14 +33,11 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "gift-pegjs": "^0.2.1",
     "git-repo-version": "^1.0.2",
-    "immutability-helper": "^3.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "uuid": "^9.0.0",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
   }
