--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -24,6 +24,7 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "install-peers",
     "build": "vite build && yarn build:css",
     "build:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./dist/styles.css",
     "storybook": "concurrently \"yarn storybook:css\" \"storybook dev -p 6006\"",
@@ -65,12 +66,11 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "install-peers-cli": "^2.2.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.20",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "semantic-release": "19.0.3",
     "storybook": "^7.0.0-rc.5",
     "tailwindcss": "^3.2.4",
