--- a/sqc-ui-components/package.json
+++ b/sqc-ui-components/package.json
@@ -36,6 +36,7 @@
     "test:coverage": "jest --coverage",
     "test:dts": "find dist -name \"*.d.ts\" | xargs npx tsc --esModuleInterop --noEmit",
     "docs": "typedoc src/index.ts --out docs",
+    "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\"",
     "release": "semantic-release"
   },
   "devDependencies": {
