--- a/sqc-core-functions/package.json
+++ b/sqc-core-functions/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage",
     "test:dts": "tsc --noEmit --isolatedModules dist/template-ts.d.ts",
     "docs": "typedoc src/index.ts --out docs",
+    "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\"",
     "release": "semantic-release"
   },
   "main": "dist/template-ts.cjs.js",
@@ -43,6 +44,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "json": "^11.0.0",
     "prettier": "^2.7.1",
     "rimraf": "^4.4.1",
     "rollup": "^2.75.7",
